--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,17 +22,25 @@ spec:
         env:
           - name: PORT
             value: "8080"
+          - name: GOOGLE_APPLICATION_CREDENTIALS
+            value: /var/secrets/google/google-cloud-api-key.json
+        volumeMounts:
+        - name: google-cloud-key
+          mountPath: /var/secrets/google
 
       - name: cloudsql-proxy
-          image: gcr.io/cloudsql-docker/gce-proxy:1.11
-          command: ["/cloud_sql_proxy",
-                    "-instances=apple-assignment-280918:us-central1:image-classification=tcp:5432",
-                    "-credential_file=/secrets/cloudsql/credentials.json"]
-          volumeMounts:
-            - name: my-secrets-volume
-              mountPath: /secrets/cloudsql
-              readOnly: true
+        image: gcr.io/cloudsql-docker/gce-proxy:1.11
+        command: ["/cloud_sql_proxy",
+                  "-instances=apple-assignment-280918:us-central1:image-classification=tcp:5432",
+                  "-credential_file=/secrets/cloudsql/credentials.json"]
+        volumeMounts:
+          - name: my-secrets-volume
+            mountPath: /secrets/cloudsql
+            readOnly: true
       volumes:
         - name: my-secrets-volume
           secret:
             secretName: cloudsql-instance-credentials
+        - name: google-cloud-key
+          secret:
+            secretName: cloud-storage
